Fixed logo stretching site issue.

--- a/static/source/css/layout.scss
+++ b/static/source/css/layout.scss
@@ -77,12 +77,6 @@ button:focus {
 	font-size: 50px;
 	font-weight: bold;
 	line-height: 80px;
-	font-family: 'Satisfy', cursive;
-  -webkit-transform:scale(1.3, 1.0);
-  -moz-transform:scale(1.3, 1.0);
-  -ms-transform:scale(1.3, 1.0);
-  -o-transform:scale(1.3, 1.0);
-  transform:scale(1.3, 1.0);
 }
 
 #logo a, #logo a:link, #logo a:active {
@@ -93,6 +87,13 @@ button:focus {
 	-moz-transition: 500ms linear 0s;
 	-o-transition: 500ms linear 0s;
 	transition: 500ms linear 0s;
+  font-family: 'Satisfy', cursive;
+  -webkit-transform:scale(1.3, 1.0);
+  -moz-transform:scale(1.3, 1.0);
+  -ms-transform:scale(1.3, 1.0);
+  -o-transform:scale(1.3, 1.0);
+  transform:scale(1.3, 1.0);
+  display: block;
 }
 
 #logo a:hover {
